i18n: detect user language; mirror UI for RTL languages

--- a/src/server_manager/index.html
+++ b/src/server_manager/index.html
@@ -14,8 +14,8 @@
   limitations under the License.
 -->
 <!DOCTYPE html>
-<html>
-
+<!-- Default LTR direction will be changed dynamically for RTL locales. -->
+<html dir="ltr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
@@ -47,7 +47,7 @@
   <title>Outline Manager</title>
 </head>
 
-<body dir="ltr">
+<body>
   <app-root id="appRoot"></app-root>
 </body>
 
