Fix a bug where blurring the server name after changing the name changed the UI to the Connections tab

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -559,7 +559,7 @@
         monthlyCost: {type: Number, value: 0},
         selectedTab: {
           type: String,
-          value: '',
+          value: 'connections',
         },
         managedServerUtilzationPercentage: {
           type: Number,
