--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -60,12 +60,38 @@
         justify-content: space-between;
         align-items: flex-start;
       }
+      #portForNewAccessKeysContainer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
       .detail {
         margin-top: 0px;
         font-size: 12px;
       }
       .clickable {
         cursor: pointer;
+      }
+      #keysPortSaveButton {
+        background: var(--primary-green);
+        color: #fff;
+        height: 36px;
+        width: 83 px;
+      }
+      #keysPortSaveButton[disabled] {
+        background-color: rgba(255, 255, 255, .12);
+        color: rgba(255, 255, 255, .3);
+      }
+      #keysPortCancelButton {
+        color: #fff;
+        width: 83 px;
+      }
+      #keysPortCancelButton[disabled] {
+        color:rgba(255, 255, 255, 0.3);
+        background-color: rgba(0, 0, 0, 0);
+      }
+      #portForNewAccessKeysContainer {
+        max-width: 545px;
       }
       paper-checkbox {
         /* We want the ink to be the color we're going to, not coming from */
@@ -77,6 +103,8 @@
       paper-input {
         /* Removes extra padding added by children of paper-input */
         margin-top: -8px;
+        /* Create space for error messages */
+        margin-bottom: 14px;
         --paper-input-container-label-focus: {
           color: var(--primary-green);
         };
@@ -90,8 +118,8 @@
         --paper-input-container-color: var(--medium-gray);
         --paper-input-container-input: {
           color: #fff;
-        }
-
+        };
+        --paper-input-container-invalid-color: #f28b82;
       }
       paper-input[readonly] {
         --paper-input-container-underline: {
@@ -133,7 +161,12 @@
             <h3>[[localize('settings-server-info')]]</h3>
             <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
             <p class="detail">[[localize('settings-server-rename')]]</p>
-            <paper-input readonly value="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" hidden$="[[!serverPortForNewAccessKeys]]" always-float-label maxlength="100"></paper-input>
+            <div id="portForNewAccessKeysContainer">
+              <paper-input id="keysPortInput" value="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" maxlength="5" error-color="#ffffff" error-message="ERRORMESSSAGE" hidden$="[[!serverPortForNewAccessKeys]]" on-click="_handleKeysPortClick" on-keyup="_handleKeysPortInputKeyDown" always-float-label maxlength="100"></paper-input>
+              <!-- TODO localize button text-->
+              <paper-button id="keysPortCancelButton" hidden="true" on-click="_handleKeysPortCancel">[[localize('settings-access-key-port-cancel')]]</paper-button>
+              <paper-button id="keysPortSaveButton" hidden="true" on-click="_handleKeysPortSave">[[localize('settings-access-key-port-save')]]</paper-button>
+            </div>
             <paper-input readonly value="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" hidden$="[[!serverHostname]]" always-float-label maxlength="100"></paper-input>
             <paper-input readonly value="[[serverManagementApiUrl]]" label="[[localize('settings-server-api-url')]]" hidden$="[[!serverManagementApiUrl]]" always-float-label maxlength="100"></paper-input>
             <paper-input readonly value="[[serverCreationDate]]" label="[[localize('settings-server-creation')]]" hidden$="[[!serverCreationDate]]" always-float-label maxlength="100"></paper-input>
@@ -161,6 +194,7 @@
         isServerManaged: Boolean,
         name: String,
         metricsEnabled: { type: Boolean, observer: '_metricsEnabledChanged' },
+        serverPortForNewAccessKeysValid: {type: Boolean, value: false},
         // Initialize to null so we can use the hidden attribute, which does not work well with undefined values.
         serverId: {type: String, value: null},
         serverHostname: {type: String, value: null},
@@ -208,6 +242,65 @@
           this.fire(metricsSignal);
         }
       },
+      _keysPortButtonsVisible: function(visible) {
+        this.$.keysPortSaveButton.hidden = !visible;
+        this.$.keysPortCancelButton.hidden = !visible;
+      },
+      _keysPortButtonsEnabled: function(enabled) {
+        this.$.keysPortSaveButton.disabled = !enabled;
+        this.$.keysPortCancelButton.disabled = !enabled;
+      },
+      _handleKeysPortClick: function() {
+        this._keysPortButtonsVisible(true);
+        this._keysPortButtonsEnabled(true);
+      },
+      _handleKeysPortServerSuccess() {
+        console.log('Port successfully changed');
+        this._keysPortButtonsVisible(false);
+        this.$.keysPortInput.readonly = false;
+      },
+      _handleKeysPortServerFail(message) {
+        console.log('Port failed to be changed');
+        const input = this.$.keysPortInput;
+        this._keysPortButtonsEnabled(true); 
+        input.invalid = true;
+        input.errorMessage = message;
+        input.readonly = false;
+        input.focus();
+      },
+      _handleKeysPortSave: function() {
+        this._keysPortButtonsEnabled(false);
+        this.$.keysPortInput.readonly = true;
+        this.$.keysPortInput.invalid = false;
+        this.fire('ChangePortForNewAccessKeysRequested', 
+                  {port: Number(this.$.keysPortInput.value), success: this._handleKeysPortServerSuccess.bind(this), fail: this._handleKeysPortServerFail.bind(this)});
+      },
+      _handleKeysPortCancel: function() {
+        this.$.keysPortInput.value = this.serverPortForNewAccessKeys;
+        this.$.keysPortInput.invalid = false;
+        this._keysPortButtonsVisible(false);
+      },
+      _handleKeysPortInputKeyDown: function(e) {
+        let input = this.$.keysPortInput;
+        if (event.key === 'Escape') {
+          this._handleKeysPortCancel();
+          input.blur();
+          return; 
+        } else if (event.key === 'Enter') {
+          this._handleKeysPortSave();
+          input.blur();
+          return;
+        }
+        let port = Number(input.value);
+        if (port !== port || (port < 1 || port > 65535) || !Number.isInteger(port)) {
+          input.invalid = true;
+          this.$.keysPortSaveButton.disabled = true;
+          input.errorMessage = this.localize('error-keys-port-bad-input');
+        } else {
+          input.invalid = false;
+          this.$.keysPortSaveButton.disabled = false;
+        }
+      }
     });
   </script>
 </dom-module>
